# minethink

./: .gitignore  Makefile  README.md
.github/: tests.yml
.github/workflows/: tests.yml
docs/: about.rst  build.rst  conf.py  index.rst  usage.rst
lib/: build.sh
scripts/: blockgen.py
src/: CMakeLists.txt  config.hpp.in  main.cpp  utils.cpp  utils.hpp
src/argparse/: CMakeLists.txt  argparse.cpp  argparse.hpp
src/gui/: CMakeLists.txt  color.cpp  gui.hpp  window.cpp
src/logging/: CMakeLists.txt  logging.cpp  logging.hpp
src/pathlib/: CMakeLists.txt  pathlib.cpp  pathlib.hpp
src/render/: CMakeLists.txt  basic.cpp  render.hpp
src/space3d/: CMakeLists.txt  api.cpp  mesh.cpp  proc3d.cpp  space3d.hpp  utils.cpp
src/tests/: CMakeLists.txt  tests.cpp  tests.hpp
src/utils/: CMakeLists.txt  utils.cpp  utils.hpp
tests/: formatting.py
